# osrm-ndk

./: .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  DISCUSSION.md  MEMOIR.md  MODULAR_BUILD_PLAN.md  README.md  SPEC.md  build_osrm_android.sh.md
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/www/: dashboard.css  dashboard.html  dashboard.js  index.html  map.html  map.js
android/app/src/main/java/com/osrm/android/: MainActivity.java  MonitorServer.java  OsrmNative.java  OsrmService.java
android/app/src/main/jni/: CMakeLists.txt  http_server.cpp  http_server.hpp  osrm_bridge.cpp
android/app/src/main/res/values/: themes.xml
osrm-backend-plus/src/storage/: storage.cpp
scripts/: build_all.sh  build_osrm_android.sh  deploy.sh  deploy_moto.sh  env_android.sh  fetch_deps.sh  osrm-cli.sh  package_artifacts.sh  toolchain.cmake
scripts/build_modules/: 01_build_zlib.sh  02_build_expat.sh  03_build_bzip2.sh  04_build_libxml2.sh  05_build_lua.sh  06_build_tbb.sh  07_build_civetweb.sh  08_build_boost.sh  09_build_osrm.sh
